Added a limit on the number of responses to the template, now equals 1 Refactoring: renaming and removing ViewModels and Classes

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@using CourseProject.ViewModels
+﻿@using CourseProject.ViewModels.Admin
 @using Microsoft.Extensions.Localization
-@model IEnumerable<UserViewModel>
+@model IEnumerable<AdminIndexViewModel>
 @inject IStringLocalizer<SharedResources> localizer
 
 <div class="container mt-5">
