--- a/Views/Form/SubmitForm.cshtml
+++ b/Views/Form/SubmitForm.cshtml
@@ -1,9 +1,10 @@
 ﻿@using CourseProject
 @using CourseProject.ViewModels
+@using CourseProject.ViewModels.Form
 @using Microsoft.Extensions.Localization
 @using System.Security.Claims
 @inject IStringLocalizer<SharedResources> localizer
-@model SubmitFormViewModel
+@model FormSubmitFormViewModel
 
 <div class="container mt-5">
     <h2>@localizer["YourAnswers"]</h2>
