--- a/Views/Form/ViewAnswer.cshtml
+++ b/Views/Form/ViewAnswer.cshtml
@@ -4,7 +4,7 @@
 @using Microsoft.Extensions.Localization
 @using System.Security.Claims
 @inject IStringLocalizer<SharedResources> localizer
-@model ViewAnswerViewModel
+@model FormViewAnswerViewModel
 
 <div class="container mt-5">
     <h2>@localizer["Template"]: @Model.Template.Title</h2>
