--- a/Views/Template/Statistics.cshtml
+++ b/Views/Template/Statistics.cshtml
@@ -1,6 +1,7 @@
 ﻿@using CourseProject.ViewModels
+@using CourseProject.ViewModels.Template
 @using Microsoft.Extensions.Localization
-@model List<QuestionStatisticsViewModel>
+@model List<TemplateStatisticsViewModel>
 @inject IStringLocalizer<SharedResources> localizer
 
 <div class="container mt-5">
