--- a/Views/Template/Partials/_StatisticsPartial.cshtml
+++ b/Views/Template/Partials/_StatisticsPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using CourseProject.ViewModels
 @using CourseProject.ViewModels.Template
 @using Microsoft.Extensions.Localization
-@model List<TemplateStatisticsViewModel>
+@model TemplateStatisticsViewModel
 @inject IStringLocalizer<SharedResources> localizer
 
 <div class="container mt-5">
@@ -9,7 +9,7 @@
     <div class="list-group">
         <div>
             <h4>@localizer["QuestionsStatistics"]</h4>
-                @foreach (var stat in Model)
+                @foreach (var stat in Model.QuestionsStatistic)
                 {
                     <div class="list-group-item">
                         <div class="mb-2">
