--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -2,11 +2,28 @@
 @using CourseProject.ViewModels
 @using CourseProject.ViewModels.Account
 @using Microsoft.Extensions.Localization
+@using System.Security.Claims
 @inject IStringLocalizer<SharedResources> localizer
 @model ProfileViewModel
 
 <div class="container mt-5">
     <h2>@localizer["YourProfile"]</h2>
+
+    @if (User.IsInRole("Admin") || User.FindFirstValue(ClaimTypes.NameIdentifier) == Model.UserId)
+    {
+        if (Model.HasAccountOnSalesforce)
+        {
+            <a asp-controller="Salesforce" asp-action="Create" asp-route-userId="@Model.UserId" class="btn btn-primary mb-3">
+                @localizer["EditSalesforceAccount"]
+            </a>
+        }
+        else
+        {
+            <a asp-controller="Salesforce" asp-action="Create" asp-route-userId="@Model.UserId" class="btn btn-primary mb-3">
+                @localizer["CreateSalesforceAccount"]
+            </a>
+        }
+    }
 
     <ul class="nav nav-tabs" id="profile-tabs" role="tablist">
         <li class="nav-item" role="presentation">
